just everything i changed

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
                             <li>Welpen-Wesenstest</li>
                             <li>Verahaltensüberprüfungen gem. § 10 Abs. 2 LHundG NRW</li>
                             <li>Sachkundenachweise gem. §§ 10 Abs. 3, 11 Abs. 2 LHundG NRW</li>
-                            <li>Themenspezifische Vorträge &amp; Seminare: Sie suchen eine Referentin oder möchten
-                                wissen wo und wann Sie Vorträgen oder Seminaren beiwohnen können, dann fragen
+                            <li>Themenspezifische Vorträge &amp; Seminare:<br>Sie suchen eine Referentin oder möchten
+                                wissen wo und wann Sie Vorträgen oder Seminaren beiwohnen können, <br>dann fragen
                                 Sie gerne an.</li>
                         </ul>
                     </div>
@@ -286,6 +286,7 @@
                         <li>Seminare & Workshops auf Anfrage</li>
                         <div class="leistungen_typ_container">
                             <button onclick="sendToFormular()" class="leistungen_type_button">Hier zum Formular</button>
+                            <button onclick="sendToFormular()" class="leistungen_type_button">Formular hochladen</button>
                         </div>                   
                     </ul>
                 </div>
