--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                         <p></p>
                         <li>Seminare & Workshops auf Anfrage</li>
                         <div class="leistungen_typ_container">
-                            <button onclick="sendToFormular()" class="leistungen_type_button">Hier zum Formular</button>
-                            <button onclick="sendToFormular()" class="leistungen_type_button">Formular hochladen</button>
+                            <button onclick="sendFormularToUser()" class="leistungen_type_button">Hier zum Formular</button>
+                            <button onclick="sendFormularToEmail()" class="leistungen_type_button">Formular hochladen</button>
                         </div>                   
                     </ul>
                 </div>
