staged section media-queries and blocks for mobile

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
             <div class="block">
                 <h2 class="block-title">DIENSTHUNDETRAINING</h2>
                 <div class="content-container">
-                    <ul class="block-only-text">
+                    <div class="text_and_list">
                         <p class="block-text">Sie betreiben ein Sicherheitsunternehmen oder sind Diensthundeführer und erfüllen damit die nötige gesetzliche Voraussetzung einen Hund seinen Anlagen enstprechend als Schutz- oder Sprengstoffspürhund auszubilden. Dann kontaktieren Sie mich gerne.</p>
-                    </ul>
+                    </div>
                     <ul class="image-button-container">
                         <img src="pictures/sectionC3Pic.png" alt="Beschreibung des Bildes" class="block-image">
                         <button class="block-list-button" onclick="scrollToElementPreise()">Preise und Kontakt</button>
