Changes for historie-section and footer

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     <footer class="footer">
         <div class="icon-and-contact-container">
             <ul class="icon-and-contact">
-                <img src="pictures/logo.jpg" alt="Falke Dog Coaching Logo" class="logo-image">
+                <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
                 <p class="footer_para_c1_line"></p>
                 <p class="footer_p">+49(0)157 735 136 94</p>
                 <p class="footer_p">example@falke-dog-coaching.de</p>
