--- a/index.html
+++ b/index.html
@@ -383,13 +383,12 @@
                 </div>
             </div>
         </section>
-        <p class="para_c1_line"></p>
+        <p class="para_c1_line" id="historie"></p>
         <div class="historie_pic_container">
             <img src="pictures/historiePic.png" alt="historie picture load" class="historie_pic">
         </div>
-        <p class="para_c1_line" id="historie"></p>
-        <div class="historie_text_container">
-            <h2 class="historie_text">HISTORIE</h2>
+        <div class="historie_text_container" id="historie">
+            <h2 class="header_mein_coaching_header">HISTORIE</h2>
             <p class="historie_main_text">
                 Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh. Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen. Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause. Sie begleitete mich ganze 16 Jahre!
                 <span id="moreLinkHistorie" style="color: rgb(135, 135, 135); cursor: pointer;" onclick="toggleHistorieText(false)"><br><br>Mehr anzeigen...</span>
