just the lines on top and bottom of headers

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <img src="pictures/underHeaderPic.png" alt="" class="pic_c1">
         <div class="info-box" id="phylosophie">
             <div class="info_box_header">
-                <h1 class="header_mein_hundetraining">PHILOSOPHIE</h1>
+                <h1 class="header_mein_coaching_header">PHILOSOPHIE</h1>
             </div>
             <p class="phylosophie_text">
                 Gemeinsames Lernen für eine vertrauensvolle Partnerschaft zwischen Mensch und Hund benötigt mehr als stringentes Lernen von Grundübungen. <br><br>Wie jedes Lebewesen ist auch jeder Hund individuell, hat unterschiedliche Charakterzüge, Prägungen, Interessen und Ängste. Die Konstitution unserer Hunde ist abhängig von seinen bisherigen Erfahrungen und dem Erbe, das seine jeweiligen Vorfahren ihm mit auf den Weg gegeben haben.
@@ -227,7 +227,7 @@
             }
         </script> 
         <section class="section">
-            <div class="mein_coaching_header" id="leistungen">
+            <div class="info_box_header" id="leistungen">
                 <h1 class="header_mein_coaching_header">MEIN COACHING</h1>
             </div>
             <div class="block">
@@ -330,9 +330,11 @@
                 </div>
             </div>
         </section>
-        <section class="section_pricing" id="preise">
-            <div class="block_pricing"> 
-                <h2 class="header_mein_coaching_header">PREISE UND KONTAKT</h2>
+        <section class="section_pricing">
+            <div class="info-box"> 
+                <div class="info_box_header">
+                    <h1 class="header_mein_coaching_header">PREISE UND KONTAKT</h1>
+                </div>
                 <div class="content-container">
                     <img src="pictures/sectionCPricing.png" alt="Beschreibung des Bildes" class="block_pricing_image">
                     <ul class="training_type_list">
@@ -387,8 +389,10 @@
         <div class="historie_pic_container">
             <img src="pictures/historiePic.png" alt="historie picture load" class="historie_pic">
         </div>
-        <div class="historie_text_container" id="historie">
-            <h2 class="header_mein_coaching_header">HISTORIE</h2>
+        <div class="info-box" id="historie">
+            <div class="info_box_header" id="historie">
+                <h1 class="header_mein_coaching_header">HISTORIE</h1>
+            </div>
             <p class="historie_main_text">
                 Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh. Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen. Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause. Sie begleitete mich ganze 16 Jahre!
                 <span id="moreLinkHistorie" style="color: rgb(135, 135, 135); cursor: pointer;" onclick="toggleHistorieText(false)"><br><br>Mehr anzeigen...</span>
@@ -440,7 +444,7 @@
                 <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
                 <p class="footer_para_c1_line"></p>
                 <p class="footer_p">+49(0)157 735 136 94</p>
-                <p class="footer_p">example@falke-dog-coaching.de</p>
+                <p class="footer_p">info@falke-dog-coaching.de</p>
             </ul>
         </div>
         <div class="contact-and-impressum-container">
