--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         </section>
         <section class="section_pricing">
             <div class="info-box"> 
-                <div class="info_box_header">
+                <div class="info_box_header" id="preise">
                     <h1 class="header_mein_coaching_header">PREISE UND KONTAKT</h1>
                 </div>
                 <div class="content-container">
@@ -439,26 +439,28 @@
         <p class="para_c1_line"></p>
     </main>
     <footer class="footer">
-        <div class="icon-and-contact-container">
-            <ul class="icon-and-contact">
-                <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
-                <p class="footer_para_c1_line"></p>
-                <p class="footer_p">+49(0)157 735 136 94</p>
-                <p class="footer_p">j.falke@falke-dog-coaching.de</p>
-            </ul>
-        </div>
-        <div class="contact-and-impressum-container">
-            <ul class="contact-and-impressum">
-                <button class="contact_button" onclick="openLink()">FACEBOOK</button>
-                <script>
-                    function openLink() {
-                        var url = "https://www.facebook.com/people/Falke-Dog-Coaching/100055664746097/";
-                        window.open(url, '_blank');
-                    }
-                </script>
-                <p class="footer_para_c1_line_contact_impressum"></p>
-                <button class="impressum_button">IMPRESSUM</button>
-            </ul>
+        <div class="footer_container">
+            <div class="icon-and-contact-container">
+                <ul class="icon-and-contact">
+                    <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
+                    <p class="footer_para_c1_line"></p>
+                    <p class="footer_p">+49(0)157 735 136 94</p>
+                    <p class="footer_p">j.falke@falke-dog-coaching.de</p>
+                </ul>
+            </div>
+            <div class="contact-and-impressum-container">
+                <ul class="contact-and-impressum">
+                    <button class="contact_button" onclick="openLink()">FACEBOOK</button>
+                    <script>
+                        function openLink() {
+                            var url = "https://www.facebook.com/people/Falke-Dog-Coaching/100055664746097/";
+                            window.open(url, '_blank');
+                        }
+                    </script>
+                    <p class="footer_para_c1_line_contact_impressum"></p>
+                    <button class="impressum_button">IMPRESSUM</button>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
