--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <div class="footer_container">
             <div class="icon-and-contact-container">
                 <ul class="icon-and-contact">
-                    <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image">
+                    <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image-footer">
                     <p class="footer_para_c1_line"></p>
                     <p class="footer_p">+49(0)157 735 136 94</p>
                     <p class="footer_p">j.falke@falke-dog-coaching.de</p>
