fixed facebook icon

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
             <div class="contact-and-impressum-container">
                 <ul class="contact-and-impressum">
-                    <button class="contact_button" onclick="openLink()"><img src="facebook-icon.png" alt="facebook"></button>
+                    <button class="contact_button" onclick="openLink()"><img src="pictures/facebook-icon.png" alt="facebook"></button>
                     <script>
                         function openLink() {
                             var url = "https://www.facebook.com/people/Falke-Dog-Coaching/100055664746097/";
