added lines under each section

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                 }
             }
         </script> 
+        <p class="para_c1_line"></p>
         <section class="section">
             <div class="info_box_header" id="leistungen">
                 <h1 class="header_mein_coaching_header">COACHING</h1>
@@ -330,6 +331,7 @@
                 </div>
             </div>
         </section>
+        <p class="para_c1_line"></p>
         <section class="section_pricing">
             <div class="info-box"> 
                 <div class="info_box_header" id="preise">
@@ -422,6 +424,7 @@
                 </span>
             </p>
         </div>
+        <p class="para_c1_line"></p>
         <script>
             function toggleHistorieText(hide) {
                 var hiddenText = document.getElementById("hiddenHistorieText");
