--- a/index.html
+++ b/index.html
@@ -396,16 +396,17 @@
                 <h1 class="header_mein_coaching_header">HISTORIE</h1>
             </div>
             <p class="historie_main_text">
-                Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh. Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen. Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause. Sie begleitete mich ganze 16 Jahre!
+                Die Leidenschaft von Hunden umgeben zu sein, mich mit Ihnen auseinander zu setzen und sie zu verstehen begann bereits sehr früh. Nachdem ich sämtliche Nachbarshunde ausführte, mich Stunden lang mit Hundebüchern beschäftigte, begann ich mit 10 Jahren ehrenamtlich Tierheimhunde auszuführen. 
+                <br><br>Mit 12 Jahren war es dann endlich soweit, meine erste Hündin durfte mit nach Hause. Sie begleitete mich ganze 16 Jahre!
                 <span id="moreLinkHistorie" style="color: rgb(135, 135, 135); cursor: pointer;" onclick="toggleHistorieText(false)"><br><br>Mehr anzeigen...</span>
                 <span id="hiddenHistorieText" style="display: none;">
                     Der Wolf als Vorfahre des Hundes interessiert mich besonders, da in jedem Haushund seine Gene enthalten sind. Jedoch ist die Wesensdistanz zwischen beiden recht groß. Um den wölfischen Aspekten unserer modernen Hunde näherzukommen, entschied ich mich, den Straßenhund zu erforschen.
                     <br><br>
                     Hierfür reiste ich 2007 für ein Jahr nach Russland, da die Population der freilebenden Hunde dort besonders groß ist. Die dabei gewonnenen Erfahrungen sind mir bei meiner Arbeit eine große Hilfe.
                     <br><br>
-                    Nach meiner Rückkehr beschloss ich, auf meinen dortigen Beobachtungen aufzubauen und begann meine Ausbildung als Hunde-Coach und Verhaltensberaterin bei „Kennel 101“ (Ausbildungszentrum für Sprengstoffspür- und Diensthunde sowie Hundepension und Zuchtstätte). Das Wissen meines Mentors bei „Kennel 101“ basiert auf einer 25-jährigen erfolgreichen Arbeit auf internationaler Ebene.
+                    Nach meiner Rückkehr beschloss ich, auf meinen dortigen Beobachtungen aufzubauen und begann meine Ausbildung als Hunde-Coach und Verhaltensberaterin bei „Kennel 101“ (Ausbildungszentrum für Sprengstoffspür- und Diensthunde sowie Hundepension und Zuchtstätte). Das Wissen meines Mentors bei „Kennel 101“ basiert auf einer 25-jährigen erfolgreichen Arbeit auf internationaler Ebene Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes. Seit April 2010 arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin.
                     <br><br>
-                    Während meiner Ausbildung erhielt ich den Sachkundenachweis gem. § 11 Abs. 2 TierSchG durch eine persönliche Prüfung des Veterinäramtes. Seit April 2010 arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin.
+                    Seit April 2010 arbeite ich als selbstständige Hundeausbilderin und Verhaltensberaterin.
                     <br><br>
                     Im Dezember 2014 erhielt ich die nach neuesten Gesetzen erforderliche Zertifizierung gem. § 11 Abs. 1 Nr. 8 f TierSchG. Im Jahre 2016 wurde diese um den § 11 Abs. 1 Nr. 6 TierSchG erweitert. Um mir rund um das Thema Tier & Natur noch mehr fundiertes Wissen anzueignen, machte ich 2014 darüber hinaus den Jagdschein.
                     <br><br>
@@ -424,7 +425,6 @@
                 </span>
             </p>
         </div>
-        <p class="para_c1_line"></p>
         <script>
             function toggleHistorieText(hide) {
                 var hiddenText = document.getElementById("hiddenHistorieText");
