footer alignment + new kontakt button + footer tel colour fix

--- a/index.html
+++ b/index.html
@@ -438,8 +438,7 @@
                     moreLinkHistorie.style.display = "none";
                 }
             }
-        </script>
-        <p class="para_c1_line"></p>
+        </script>  
     </main>
     <footer class="footer">
         <div class="footer_container">
@@ -447,13 +446,13 @@
                 <ul class="icon-and-contact">
                     <img src="pictures/logo.png" alt="Falke Dog Coaching Logo" class="logo-image-footer">
                     <p class="footer_para_c1_line"></p>
-                    <p class="footer_p">+49(0)157 735 136 94</p>
+                    <p class="footer_p"><a href="tel:+4915773513694">+49(0)157 735 136 94</a></p>
                     <p class="footer_p">j.falke@falke-dog-coaching.de</p>
                 </ul>
             </div>
-            <div class="contact-and-impressum-container">
-                <ul class="contact-and-impressum">
-                    <button class="contact_button" onclick="openLink()"><img src="pictures/facebook-icon.png" alt="facebook"></button>
+            <div class="socials-and-impressum-container">
+                <ul class="socials-and-impressum">
+                    <button class="facebook_button" onclick="openLink()"><img src="pictures/facebook-icon.png" alt="facebook"></button>
                     <script>
                         function openLink() {
                             var url = "https://www.facebook.com/people/Falke-Dog-Coaching/100055664746097/";
@@ -461,6 +460,7 @@
                         }
                     </script>
                     <p class="footer_para_c1_line_contact_impressum"></p>
+                    <button class="kontakt_button">KONTAKT</button>
                     <button class="impressum_button">IMPRESSUM</button>
                 </ul>
             </div>
